# sitm

./: CMakeLists.txt  README.md
mex/: README.md  build_mac.m  build_massive.m  build_mcc.m  build_monarch.m  build_windows.m  current11.csv  dmat.cpp  estimateNA.m  massive_prepare_env.sh  sitm.cpp  sitm.mexmaci64  sitm_mp.mexmaci64  spambase.mat  test.m  test2.m  testNA.m  test_data.mat  test_mem.m  tic.csv  tic.mat
msvs/: metafeature.sln  metafeature.vcxproj  metafeature.vcxproj.filters
src/: CMakeLists.txt  Data.cpp  Data.h  main.cpp
src/cuda/: Makefile  dmat.cu  dmat.h  test  test.cpp
test/: abalone.arff  audiology_std.arff  automobile.arff  check_openmp.cpp  current1.arff  current1_na.arff  data1.arff  data1_result.txt  flags.arff  hepatitis.arff  horse_colic_lesion.arff  horse_colic_outcome.arff  hv_noise.arff  iris.arff  iris_na.arff  natest.arff  spambase.arff  tic.arff
test/current1_R_result/: current1.MFs.txt
test/current1_R_result/ConceptChar/current1.MFs/: current1.delta.txt
test/current1_R_result/Landmarking/current1.MFs/: current1.DN-fold1.RData  current1.DN-fold10.RData  current1.DN-fold2.RData  current1.DN-fold3.RData  current1.DN-fold4.RData  current1.DN-fold5.RData  current1.DN-fold6.RData  current1.DN-fold7.RData  current1.DN-fold8.RData  current1.DN-fold9.RData  current1.WN-fold1.RData  current1.WN-fold10.RData  current1.WN-fold2.RData  current1.WN-fold3.RData  current1.WN-fold4.RData  current1.WN-fold5.RData  current1.WN-fold6.RData  current1.WN-fold7.RData  current1.WN-fold8.RData  current1.WN-fold9.RData  current1.foldsID.txt
test/data1_R_result/: data1.MFs.txt
test/data1_R_result/ConceptChar/data1.MFs/: data1.Dmat.txt  data1.delta.txt
test/data1_R_result/Landmarking/data1.MFs/: data1.DN-fold5.RData  data1.DN-fold9.RData  data1.WN-fold8.RData  data1.foldsID.txt
